# libx-msg-im-xsc

./: CMakeLists.txt  README.md  XmsgImChannel.cpp  XmsgImChannel.h  XmsgImH2NMsgMgr.cpp  XmsgImH2NMsgMgr.h  XmsgImLog.cpp  XmsgImLog.h  XmsgImMsgMgr.cpp  XmsgImMsgMgr.h  XmsgImMsgStub.cpp  XmsgImMsgStub.h  XmsgImN2HMsgMgr.cpp  XmsgImN2HMsgMgr.h  XmsgImTrans.cpp  XmsgImTrans.h  XmsgImTransInitiative.cpp  XmsgImTransInitiative.h  XmsgImTransPassive.cpp  XmsgImTransPassive.h  XmsgImTransUnidirectionInit.cpp  XmsgImTransUnidirectionInit.h  XmsgImTransUnidirectionPass.cpp  XmsgImTransUnidirectionPass.h  __file__.cmake  build.sh  clean.sh  libx-msg-im-xsc.h
http/: XmsgImHttpChannel.cpp  XmsgImHttpChannel.h  XmsgImHttpLog.cpp  XmsgImHttpLog.h  net-x-msg-xsc-http.pb.cc  net-x-msg-xsc-http.pb.h  net-x-msg-xsc-http.proto
rudp/: XmsgImRudpChannel.cpp  XmsgImRudpChannel.h  XmsgImRudpLog.cpp  XmsgImRudpLog.h
tcp/: XmsgImTcpChannel.cpp  XmsgImTcpChannel.h  XmsgImTcpH2N.cpp  XmsgImTcpH2N.h  XmsgImTcpLog.cpp  XmsgImTcpLog.h  XmsgImTcpN2H.cpp  XmsgImTcpN2H.h
udp/: XmsgImUdpChannel.cpp  XmsgImUdpChannel.h  XmsgImUdpLog.cpp  XmsgImUdpLog.h
ws/: XmsgImWebSocketChannel.cpp  XmsgImWebSocketChannel.h  XmsgImWebSocketLog.cpp  XmsgImWebSocketLog.h
